package monte_carlo_tree_search.classes;

import lombok.Builder;

@Builder
public class TreePlotData {
    public double maxValue;
    public double nofNodes;
    public double maxDepth;
}
